# zero2prod

./: .env.example  Cargo.toml  Dockerfile  README.md  bacon.toml  config.yaml
.cargo/: config.toml
.github/workflows/: general.yaml
.sqlx/: query-0710ff75826e88af03efd7187560a4c981c552da21a6458287189d34459ede23.json  query-1983eaac04eb9ff0d2270722f2e9aa44d589c9c6c23a37fb32eb22d4c13b323f.json  query-269b8424cd193d5fc98bc829a4e15fd313a8ed7401d03c4c72da624a929aa32e.json  query-2aa3124b00dbb4e06c369c6e63730714dde99aa3bbdb07fb7bcf40e0fb90edfd.json  query-688df107cbd28eb1b2aabc312b5daad6d3d4145a7866153e168bd008a43bf344.json  query-aa7e732d453403819a489e1a4ac5c56cd3b57bc882c8b1e96a887811f8f999cd.json  query-d94df032d6088aeac0fd5abfed9b16e124eaf2bb2c9379d7a8c9040f2b1065d5.json
config/: base.yaml  prod.yaml
hack/: start-db.sh
migrations/: 20231215143952_create_subscriptions_table.sql  20231230231235_status.sql  20240101191757_subscription_tokens.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscriber_status.rs
src/routes/: health.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
templates/: confirm-email.html  confirm-email.txt
tests/: healthz.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
