[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
claims = "0.7.1"
config = "0.13.4"
fake = "~2.3"
once_cell = "1.19.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8.5", features = ["std_rng"] }
rayon = "1.8.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.109"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.3"
tera = "1.19.1"
thiserror = "1.0.56"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
linkify = "0.10.0"
urlencoding = "2.1.3"
wiremock = "0.5.22"
